--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Priyanshu Rana | Projects</title>
+    <title>Milan Jasani | Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
